<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.EligibleFragment">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="454dp"
        android:orientation="vertical"
        android:background="@drawable/container_acc"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:paddingTop="52dp"
        android:paddingBottom="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:src="@drawable/acc"
            android:layout_gravity="center"
            />

        <TextView
            android:id="@+id/dateAcc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@tools:sample/date/ddmmyy"
            android:textSize="14sp"
            android:layout_gravity="center"
            android:fontFamily="@font/opensansmedium"
            android:textColor="@color/black"
            android:layout_marginTop="18dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/green"
            android:textSize="18sp"
            android:text="@string/pengajuan_diterima"
            android:fontFamily="@font/opensansbold"
            android:layout_gravity="center"
            android:layout_marginTop="18dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/eligible1"
            android:layout_marginStart="28dp"
            android:layout_marginEnd="28dp"
            android:layout_marginTop="25dp"
            android:fontFamily="@font/opensansbold"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:gravity="center"
            android:justificationMode="inter_word"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/eligible2"
            android:layout_marginStart="28dp"
            android:layout_marginEnd="28dp"
            android:layout_marginTop="25dp"
            android:fontFamily="@font/opensansreguler"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:gravity="center"
            android:justificationMode="inter_word"
            />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>